fix(components): Fix wrong alignment in headings

--- a/packages/browser-utils/src/styles/components/typography/heading.css
+++ b/packages/browser-utils/src/styles/components/typography/heading.css
@@ -1,3 +1,8 @@
-.spx-heading:has(+ .spx-divider) {
-  margin-bottom: 0;
+.spx-heading {
+  display: flex;
+  align-items: center;
+
+  &:has(+ .spx-divider) {
+    margin-bottom: 0;
+  }
 }
